# app

./: HOW_TO_APPLY_PATCH.html  README.md  TV_SETUP.md  app1.js  app2.js  app3.js  backend_aggregator.js  bloomberg-terminal-final-3.html  bloomberg-terminal-fixed-3.html  bloomberg-terminal-fixed-4-2.html  bloomberg-terminal-fixed-4-4.html  bloomberg-terminal-fixed-4-7-2.html  bloomberg-terminal-fixed-4-7-3-3.html  bloomberg-terminal-fixed-4-7-3.html  bloomberg-terminal-fixed-4.html  bloomberg_terminal_patch.js  data  fetch_volsurface.py  index-8.html  index-9-4-6-34.html  index.html  logs.1775077784161.json  macro.yml  macro_scraper.py  ovol_module.js  requirements.txt  scrape.yml  scraper.py  style.css  terminal_work-3-crypto.html  tv_bridge.js  update_volsurface.yml  volsurface.yml
.github/workflows/: scrape.yml
crypto-terminal-app/: Package.swift  README.md
crypto-terminal-app/Sources/crypto-terminal-app/: ContentView.swift  TerminalWebView.swift  crypto_terminal_app.swift
crypto-terminal-app/Tests/crypto-terminal-appTests/: crypto_terminal_appTests.swift
crypto-terminal-app/engine/: CMakeLists.txt
crypto-terminal-app/engine/src/: main.cpp
crypto-terminal-app/scripts/: build.sh  build_engine.sh  package_app.sh  run.sh
files/: fetch_volsurface.js
run: node scripts/: fetch_volsurface.js
